# longevity-faers

./: .gitattributes  .gitignore  ANALYSIS_COMPLETE.md  CITATION.cff  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  GITHUB_READY.md  LICENSE  NOTEBOOK_TEST_RESULTS.md  PUSH_INSTRUCTIONS.md  PUSH_TO_GITHUB.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt  run_disproportionality_analysis.py  run_ml_analysis.py  run_notebooks.py  test_functionality.py  test_notebook_workflow.py
.github/workflows/: ci.yml
config/: ae_mapping.yaml  data_config.yaml  drug_list.yaml
docs/: discussion.md  faers_notes.md  methods.md
notebooks/: 01_explore_faers.ipynb  02_disproportionality.ipynb  03_multilabel_model.ipynb
results/tables/: atorvastatin_calcium_top50_signals.csv  atorvastatin_top50_signals.csv  canagliflozin_top50_signals.csv  dapagliflozin_top50_signals.csv  disproportionality_results.csv  dulaglutide_top50_signals.csv  empagliflozin_top50_signals.csv  feature_importance.csv  liraglutide_top50_signals.csv  metformin_hydrochloride_top50_signals.csv  metformin_top50_signals.csv  ml_metrics.csv  rosuvastatin_calcium_top50_signals.csv  rosuvastatin_top50_signals.csv  semaglutide_top50_signals.csv  simvastatin_top50_signals.csv
scripts/: build_dataset.py  download_faers.py  unpack_faers.py
src/: __init__.py
src/data_ingest/: __init__.py  dedupe_cases.py  demographics_cleaner.py  drug_normalizer.py  load_faers.py
src/features/: ae_category_mapper.py  feature_engineering.py
src/models/: __init__.py  disproportionality.py  multilabel_classifier.py
src/viz/: roc_curves.py  volcano_plots.py
tests/: test_disproportionality.py
